--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -21,6 +21,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Time Related"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-06-01 2018-08-29\n"
+     ]
+    }
+   ],
+   "source": [
+    "date_format = \"%Y-%m-%d\"\n",
+    "from datetime import datetime\n",
+    "from datetime import timedelta\n",
+    "from datetime import date\n",
+    "\n",
+    "now = str(date.today())\n",
+    "start = datetime.strptime(now, date_format)+timedelta(days=-2)\n",
+    "start.strftime(date_format)\n",
+    "\n",
+    "now = datetime.now()\n",
+    "start = now + timedelta(days=-90)\n",
+    "start = start.strftime(date_format)\n",
+    "end = now + timedelta(days=-1)\n",
+    "end = end.strftime(date_format)\n",
+    "\n",
+    "print(start,end)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Time Loop"
    ]
   },
@@ -71,6 +110,14 @@
     "rows = [[1,2],[3,4],[5,6]]\n",
     "for row in rows:\n",
     "    df.loc[len(df)] = row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Filter Rows\n",
+    "-  https://stackoverflow.com/questions/15325182/how-to-filter-rows-in-pandas-by-regex"
    ]
   }
  ],
