--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -94,12 +94,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### DataFrame "
+    "#### DataFrame \n",
+    "https://chrisalbon.com/python/data_wrangling/pandas_data_structures/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +111,151 @@
     "rows = [[1,2],[3,4],[5,6]]\n",
     "for row in rows:\n",
     "    df.loc[len(df)] = row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "3 4\n",
+      "5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterate rows and get valeus of a,b column\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row['a'],row['b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(np.random.rand(10,4),columns=list('ABCD'))\n",
+    "\n",
+    "for row in df.itertuples():\n",
+    "    print(row.A, row.Index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a series\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "data = np.array(['a','b','c','d'])\n",
+    "s = pd.Series(data,index=[100,101,102,103])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# access data\n",
+    "print(s[100]) # with index lable\n",
+    "print(s[:3]) # with slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 a\n",
+      "101 b\n",
+      "102 c\n",
+      "103 d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# series iterate to get the index and value\n",
+    "for i, v in s.items():\n",
+    "    print(i,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 1, 1: 2, 2: 3, 3: 4}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# series to dict\n",
+    "s = pd.Series([1, 2, 3, 4])\n",
+    "s.to_dict()\n",
+    "{0: 1, 1: 2, 2: 3, 3: 4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create series from dict\n",
+    "data = {'a' : 0., 'b' : 1., 'c' : 2.}\n",
+    "s = pd.Series(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 3, 4, 6] [0, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Series to Value and Index (Arrary) to List\n",
+    "import pandas as pd\n",
+    "s= pd.Series([6,3,4,6])\n",
+    "print(s.values.tolist(),s.index.values.tolist())"
    ]
   },
   {
