--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "2  5  6"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "2  5  6  alice"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,19 +351,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bob</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "c\n",
-       "alice    2\n",
-       "bob      1\n",
-       "Name: b, dtype: int64"
+       "       c  b\n",
+       "0  alice  2\n",
+       "1    bob  1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +413,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "c      a\n",
+       "alice  1    1\n",
+       "       5    1\n",
+       "bob    3    1\n",
+       "Name: a, dtype: int64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('c')['a'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>a</th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>alice</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bob</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "a        1    3    5\n",
+       "c                   \n",
+       "alice  1.0  0.0  1.0\n",
+       "bob    0.0  1.0  0.0"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# unstack: Unstack switches the rows to columns to get the activity counts as features.\n",
+    "df.groupby('c')['a'].value_counts().unstack().fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +570,7 @@
        "1  3  4    bob"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,16 +581,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'alice'"
+       "0    alice\n",
+       "Name: c, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,9 +613,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.121853</td>\n",
+       "      <td>0.045715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.769957</td>\n",
+       "      <td>0.934491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          B         D\n",
+       "0  0.121853  0.045715\n",
+       "1  0.769957  0.934491"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# select multiple rows and columns by index\n",
+    "df.iloc[0:2:,[1,3]]\n",
+    "# select multiple rows and columns by name \n",
+    "df.loc[[2,3],['B','D']] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values per column:\n",
+      "A    0\n",
+      "B    0\n",
+      "C    0\n",
+      "D    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values per row:\n",
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "4    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply function\n",
+    "def num_missing(x):\n",
+    "    return sum(x.isnull())\n",
+    "\n",
+    "#Applying per column:\n",
+    "print(\"Missing values per column:\")\n",
+    "print(df.apply(num_missing, axis=0)) #axis=0 defines that function is to be applied on each column\n",
+    "\n",
+    "#Applying per row:\n",
+    "print(\"\\nMissing values per row:\")\n",
+    "print(df.apply(num_missing, axis=1).head()) #axis=1 defines that function is to be applied on each row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>large</th>\n",
+       "      <th>small</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "C        large  small\n",
+       "A   B                \n",
+       "bar one    4.0    5.0\n",
+       "    two    7.0    6.0\n",
+       "foo one    4.0    1.0\n",
+       "    two    NaN    6.0"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pivot table\n",
+    "df = pd.DataFrame({\"A\": [\"foo\", \"foo\", \"foo\", \"foo\", \"foo\",\n",
+    "                         \"bar\", \"bar\", \"bar\", \"bar\"],\n",
+    "                   \"B\": [\"one\", \"one\", \"one\", \"two\", \"two\",\n",
+    "                         \"one\", \"one\", \"two\", \"two\"],\n",
+    "                   \"C\": [\"small\", \"large\", \"large\", \"small\",\n",
+    "                         \"small\", \"large\", \"small\", \"small\",\n",
+    "                         \"large\"],\n",
+    "                   \"D\": [1, 2, 2, 3, 3, 4, 5, 6, 7]})\n",
+    "pd.pivot_table(df, values='D', index=['A', 'B'], columns=['C'], aggfunc=np.sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06927066276754756 0\n",
+      "0.7433315967127784 1\n",
+      "0.2227109242961567 2\n",
+      "0.03113072493306268 3\n",
+      "0.43192793870532176 4\n",
+      "0.9069994416205223 5\n",
+      "0.3282763984071948 6\n",
+      "0.5552472464272361 7\n",
+      "0.8742569829200965 8\n",
+      "0.6158789362064941 9\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -491,6 +835,45 @@
     "\n",
     "for row in df.itertuples():\n",
     "    print(row.A, row.Index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data = [1,2,3,4,5]\n",
+    "my_data = np.array(my_data, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5., 4., 3., 2., 1.], dtype=float32)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort numpy narray\n",
+    "np.sort(my_data)\n",
+    "np.sort(my_data)[::-1]"
    ]
   },
   {
@@ -627,6 +1010,20 @@
    "metadata": {},
    "source": [
     "#### Format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Good to know"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inplace: https://stackoverflow.com/questions/45570984/pandas-is-inplace-true-considered-harmful-or-not"
    ]
   }
  ],
