--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -1146,6 +1146,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apply functions by group in pd\n",
+    "# Create an example dataframe\n",
+    "data = {'Platoon': ['A','A','A','A','A','A','B','B','B','B','B','C','C','C','C','C'],\n",
+    "       'Casualties': [1,4,5,7,5,5,6,1,4,5,6,7,4,6,4,6]}\n",
+    "df = pd.DataFrame(data)\n",
+    "df.groupby('Platoon')['Casualties'].apply(lambda x:x.rolling(center=False,window=2).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [
@@ -1237,34 +1251,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(np.random.rand(2,4),columns=list('ABCD'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.169110</td>\n",
+       "      <td>0.393859</td>\n",
+       "      <td>0.361514</td>\n",
+       "      <td>0.082288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.233425</td>\n",
+       "      <td>0.649333</td>\n",
+       "      <td>0.984751</td>\n",
+       "      <td>0.492745</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C         D\n",
+       "0  0.169110  0.393859  0.361514  0.082288\n",
+       "1  0.233425  0.649333  0.984751  0.492745"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas(Index=0, A=0.38552036691287095, B=0.7090222282712159, C=0.08436976980274569, D=0.4683030400650997)\n",
+      "Pandas(Index=1, A=0.7097407588579864, B=0.7811648950370957, C=0.7062211393835472, D=0.4954847350516254)\n",
+      "\n",
+      "\n",
+      "A    0.385520\n",
+      "B    0.709022\n",
+      "C    0.084370\n",
+      "D    0.468303\n",
+      "Name: 0, dtype: float64 0\n",
+      "A    0.709741\n",
+      "B    0.781165\n",
+      "C    0.706221\n",
+      "D    0.495485\n",
+      "Name: 1, dtype: float64 1\n",
+      "\n",
+      "\n",
+      "0    0.385520\n",
+      "1    0.709741\n",
+      "Name: A, dtype: float64\n",
+      "0    0.709022\n",
+      "1    0.781165\n",
+      "Name: B, dtype: float64\n",
+      "0    0.084370\n",
+      "1    0.706221\n",
+      "Name: C, dtype: float64\n",
+      "0    0.468303\n",
+      "1    0.495485\n",
+      "Name: D, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterate\n",
+    "\n",
+    "# iterate over DataFrame rows as namedtuples, with index value as first element of the tuple.\n",
+    "for row in df.itertuples(): \n",
+    "    print(row)\n",
+    "print('\\n')\n",
+    "# iterate over DataFrame rows as (index, Series) pairs.\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row, index)\n",
+    "    #print(index, row.A, row.B)\n",
+    "print('\\n')\n",
+    "# iterator over (column name, Series) pairs.\n",
+    "for index, column in df.iteritems():\n",
+    "    print(column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# value_counts(normalize=True) * 100 -> percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.861259</td>\n",
+       "      <td>-0.565163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.735167</td>\n",
+       "      <td>-1.067934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.191366</td>\n",
+       "      <td>-0.542939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.722284</td>\n",
+       "      <td>-0.383155</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          a         b\n",
+       "4  0.861259 -0.565163\n",
+       "5 -0.735167 -1.067934\n",
+       "8 -0.191366 -0.542939\n",
+       "9  0.722284 -0.383155"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# query: query the columns of a frame with a boolean expression.\n",
+    "from numpy.random import randn\n",
+    "from pandas import DataFrame\n",
+    "df = DataFrame(randn(10, 2), columns=list('ab'))\n",
+    "df.query('a > b') # equal to df[df.a > df.b]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.06927066276754756 0\n",
-      "0.7433315967127784 1\n",
-      "0.2227109242961567 2\n",
-      "0.03113072493306268 3\n",
-      "0.43192793870532176 4\n",
-      "0.9069994416205223 5\n",
-      "0.3282763984071948 6\n",
-      "0.5552472464272361 7\n",
-      "0.8742569829200965 8\n",
-      "0.6158789362064941 9\n"
+      "4384486008\n",
+      "4384486008\n",
+      "4384486064\n",
+      "4384381416\n",
+      "4384488416\n",
+      "4384486008\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "# difference between assign and .copy()\n",
+    "df1 = pd.DataFrame([1,2,3,4,5])\n",
+    "print(id(df1))\n",
     "\n",
-    "df = pd.DataFrame(np.random.rand(10,4),columns=list('ABCD'))\n",
+    "df2 = df1\n",
+    "print(id(df2)) # Same id as df1\n",
     "\n",
-    "for row in df.itertuples():\n",
-    "    print(row.A, row.Index)"
+    "df3 = df1.copy()\n",
+    "print(id(df3)) # New object, new id.\n",
+    "\n",
+    "df4 = df1.copy(deep=False)\n",
+    "print(id(df4)) # New object, new id.\n",
+    "\n",
+    "df1 = pd.DataFrame([9, 9, 9])\n",
+    "print(id(df1)) # New object created and bound to name 'df1'.\n",
+    "\n",
+    "print(id(df2))  # Old object's id not impacted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create bin using cut() function"
    ]
   },
   {
