--- a/Markdown.ipynb
+++ b/Markdown.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Emphasis**: Use this code: **Bold**: __string__ or **string** Italic: _string_ or *string*<br>\n",
+    "**<font color='red'>Emphasis</font>**: Use this code: **Bold**: __string__ or **string** Italic: _string_ or *string*<br>\n",
     "**Line breaks**: Sometimes markdown doesn’t make line breaks when you want them. Use this code for a manual line break:<br>\n",
     "**Colors**: Use this code: <font color=blue|red|green|pink|yellow>Text</font> Not all markdown code works within a font tag, so review your colored text carefully!<br>\n",
     "**Indenting**: Use a greater than sign (>) and then a space, then type the text. Everything is indented until the next carriage return.\n",
