--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -112,14 +112,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sort\n",
     "cars = ['Ford', 'BMW', 'Volvo']\n",
-    "cars.sort()"
+    "cars.sort(reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Volvo', 'Ford', 'BMW']"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BMW', 'Ford', 'Volvo']"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(cars,reverse=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = [2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 2, 3, 3, 4, 4, 5, 5, 6]"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -161,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -255,13 +323,83 @@
        "Yuma          Amy  2014       3"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>reports</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cochice</th>\n",
+       "      <td>Jason</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pima</th>\n",
+       "      <td>Molly</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santa Cruz</th>\n",
+       "      <td>Tina</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name  year reports\n",
+       "Cochice     Jason  2012       4\n",
+       "Pima        Molly  2012      24\n",
+       "Santa Cruz   Tina  2013      31"
+      ]
+     },
+     "execution_count": 380,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['year'].isin([2012,2013])]"
    ]
   },
   {
@@ -1700,6 +1838,25 @@
    "metadata": {},
    "source": [
     "#### Format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Write CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "f = csv.writer(open('test.csv','w'))\n",
+    "f.writerow(['id','name']) # write first column name\n",
+    "f.writerow([[id,name]]) # write each row"
    ]
   },
   {
