--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -1837,26 +1837,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Format"
+    "#### Write CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "final = [{'Name':'A','Hour':0,'Time':120},{'Name':'A','Hour':1,'Time':219}]\n",
+    "\n",
+    "with open('/Users/mwang/Documents/Mine/output.csv', 'w') as output_file:\n",
+    "    dict_writer = csv.DictWriter(output_file, keys, delimiter=',')\n",
+    "    dict_writer.writeheader()\n",
+    "    dict_writer.writerows(final)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "keys = ['Name','Hour','Time']\n",
+    "final2 = [['B', 0, 110],['C', 1, 130]]\n",
+    "\n",
+    "with open('/Users/mwang/Documents/Mine/output2.csv','w') as f:\n",
+    "    list_writer = csv.writer(f,delimiter=',')\n",
+    "    list_writer.writerow(keys) # write first column name\n",
+    "    for row in final2:\n",
+    "        list_writer.writerow(row) # write each row"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Write CSV"
+    "#### Write TSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "f = csv.writer(open('test.csv','w'))\n",
-    "f.writerow(['id','name']) # write first column name\n",
-    "f.writerow([[id,name]]) # write each row"
+    "keys = ['Name','Hour','Time']\n",
+    "final = [{'Name':'A','Hour':0,'Time':120},{'Name':'A','Hour':1,'Time':219}]\n",
+    "with open('/Users/mwang/Documents/Mine/output.tsv', 'w') as output_file:\n",
+    "    dict_writer = csv.DictWriter(output_file, keys, delimiter='\\t')\n",
+    "    dict_writer.writeheader()\n",
+    "    dict_writer.writerows(final)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {1: [2, 6], 3: [4, 7], 5: [0, 'Nan']})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "d1 = {1: 2, 3: 4, 5: 0}\n",
+    "d2 = {1: 6, 3: 7, 4: 8}\n",
+    "\n",
+    "\n",
+    "# join the two dicts based on the same keys\n",
+    "# create new dict\n",
+    "dd = defaultdict(list)\n",
+    "# 1: all join\n",
+    "for d in (d1, d2): # you can list as many input dicts as you want here\n",
+    "    for key, value in d.items():\n",
+    "        dd[key].append(value)\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "# create new dict\n",
+    "dd = defaultdict(list)\n",
+    "# 2: left join\n",
+    "for k1,value in d1.items():\n",
+    "    dd[k1].append(value)\n",
+    "    if k1 in d2.keys():\n",
+    "        dd[k1].append(d2[k1])\n",
+    "    else:\n",
+    "        dd[k1].append('Nan')\n",
+    "\n",
+    "print(dd)"
    ]
   },
   {
