--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -9,10 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done in 0.000 minutes.\n"
+     ]
+    }
+   ],
    "source": [
+    "from time import time\n",
     "t_start = time()\n",
     "print('done in %0.3f minutes.' % ((time() - t_start) / 60))"
    ]
@@ -224,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +306,7 @@
        "Yuma          Amy  2014       3"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,51 +345,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add new column\n",
+    "# add new column (list)\n",
     "df['age'] = [20,31,40,31,25,11,6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "index: Cochice | name: Jason | year: 2012\n",
-      "index: Pima | name: Molly | year: 2012\n",
-      "index: Santa Cruz | name: Tina | year: 2013\n",
-      "index: Maricopa | name: Jake | year: 2014\n",
-      "index: Yuma | name: Amy | year: 2014\n"
-     ]
-    }
-   ],
-   "source": [
-    "# iterate rows and get valeus of a,b column\n",
-    "for index, row in df.iterrows():\n",
-    "    print(\"index: %s | name: %s | year: %s\" %(index, row['name'],row['year']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# group \n",
-    "df_agg = df.groupby(['year'])['name'].count() # pd series \n",
-    "df_agg_df = df.groupby(['year'])['name'].count().reset_index() # data frame"
+    "# Row Bind\n",
+    "pd.concat([df1,df2])\n",
+    "df1.append(df2) # make sure the structure and column names are same\n",
+    "\n",
+    "# Column Bind\n",
+    "pd.concat([df1, df2], axis=1, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -408,6 +397,8 @@
        "      <th>year</th>\n",
        "      <th>reports</th>\n",
        "      <th>age</th>\n",
+       "      <th>performance</th>\n",
+       "      <th>reports_ranked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -417,6 +408,8 @@
        "      <td>2012</td>\n",
        "      <td>4</td>\n",
        "      <td>20</td>\n",
+       "      <td>Not Bad</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pima</th>\n",
@@ -424,6 +417,8 @@
        "      <td>2012</td>\n",
        "      <td>24</td>\n",
        "      <td>31</td>\n",
+       "      <td>Not Bad</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Santa Cruz</th>\n",
@@ -431,6 +426,8 @@
        "      <td>2013</td>\n",
        "      <td>31</td>\n",
        "      <td>40</td>\n",
+       "      <td>Awesome!</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Maricopa</th>\n",
@@ -438,6 +435,8 @@
        "      <td>2014</td>\n",
        "      <td>2</td>\n",
        "      <td>31</td>\n",
+       "      <td>Not Bad</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Yuma</th>\n",
@@ -445,6 +444,8 @@
        "      <td>2014</td>\n",
        "      <td>3</td>\n",
        "      <td>25</td>\n",
+       "      <td>Not Bad</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>April</th>\n",
@@ -452,6 +453,8 @@
        "      <td>2013</td>\n",
        "      <td>5</td>\n",
        "      <td>11</td>\n",
+       "      <td>Not Bad</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Maggie</th>\n",
@@ -459,29 +462,231 @@
        "      <td>2013</td>\n",
        "      <td>30</td>\n",
        "      <td>6</td>\n",
+       "      <td>Awesome!</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             name  year reports  age\n",
-       "Cochice     Jason  2012       4   20\n",
-       "Pima        Molly  2012      24   31\n",
-       "Santa Cruz   Tina  2013      31   40\n",
-       "Maricopa     Jake  2014       2   31\n",
-       "Yuma          Amy  2014       3   25\n",
-       "April        Wang  2013       5   11\n",
-       "Maggie        Zhu  2013      30    6"
+       "             name  year reports  age performance  reports_ranked\n",
+       "Cochice     Jason  2012       4   20     Not Bad             3.0\n",
+       "Pima        Molly  2012      24   31     Not Bad             5.0\n",
+       "Santa Cruz   Tina  2013      31   40    Awesome!             7.0\n",
+       "Maricopa     Jake  2014       2   31     Not Bad             1.0\n",
+       "Yuma          Amy  2014       3   25     Not Bad             2.0\n",
+       "April        Wang  2013       5   11     Not Bad             4.0\n",
+       "Maggie        Zhu  2013      30    6    Awesome!             6.0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find duplicate - not good ... only the second one will be selected as duplicates\n",
+    "duplicates = df.duplicated(subset=['age'])\n",
+    "\n",
+    "\n",
+    "# drop duplicate rows\n",
+    "df.drop_duplicates()\n",
+    "# drop duplicaate and keep last one\n",
+    "df.drop_duplicates(keep='last')\n",
+    "# drop duplicate by a column name\n",
+    "df.drop_duplicates(['name'], keep='last')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set value base conditions\n",
+    "df['performance'] = 'Not Bad'\n",
+    "df.loc[df['reports'] >= 30, 'performance'] = 'Awesome!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index: Cochice | name: Jason | year: 2012\n",
+      "index: Pima | name: Molly | year: 2012\n",
+      "index: Santa Cruz | name: Tina | year: 2013\n",
+      "index: Maricopa | name: Jake | year: 2014\n",
+      "index: Yuma | name: Amy | year: 2014\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterate rows and get valeus of a,b column\n",
+    "for index, row in df.iterrows():\n",
+    "    print(\"index: %s | name: %s | year: %s\" %(index, row['name'],row['year']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group \n",
+    "df_agg = df.groupby(['year'])['name'].count() # pd series \n",
+    "df_agg_df = df.groupby(['year'])['name'].count().reset_index() # data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>reports</th>\n",
+       "      <th>age</th>\n",
+       "      <th>performance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cochice</th>\n",
+       "      <td>Jason</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Not Bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pima</th>\n",
+       "      <td>Molly</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>24</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Not Bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santa Cruz</th>\n",
+       "      <td>Tina</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Awesome!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maricopa</th>\n",
+       "      <td>Jake</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Not Bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yuma</th>\n",
+       "      <td>Amy</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Not Bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>April</th>\n",
+       "      <td>Wang</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Not Bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maggie</th>\n",
+       "      <td>Zhu</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Awesome!</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name  year reports  age performance\n",
+       "Cochice     Jason  2012       4   20     Not Bad\n",
+       "Pima        Molly  2012      24   31     Not Bad\n",
+       "Santa Cruz   Tina  2013      31   40    Awesome!\n",
+       "Maricopa     Jake  2014       2   31     Not Bad\n",
+       "Yuma          Amy  2014       3   25     Not Bad\n",
+       "April        Wang  2013       5   11     Not Bad\n",
+       "Maggie        Zhu  2013      30    6    Awesome!"
+      ]
+     },
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'year', 'reports', 'age', 'performance']\n",
+      "['name', 'year', 'reports', 'age', 'performance']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get column names\n",
+    "# 1. use .columns.values\n",
+    "print(list(df.columns.values))\n",
+    "# 2. list df directly\n",
+    "print(list(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rank \n",
+    "df['reports_ranked']=df['reports'].rank(ascending=1,method='dense')"
    ]
   },
   {
@@ -745,76 +950,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df select based on two columns value and select report column - return a series\n",
+    "# df filter based on two columns value and select report column - return a series\n",
     "array_jason_2012_report = df.loc[(df['name']=='Jason') & (df['year']==2012)]['reports'].values # return a array\n",
     "value_jason_2012_report = df.loc[(df['name']=='Jason') & (df['year']==2012)]['reports'][0] # return a number\n",
     "\n",
-    "\n",
-    "# df select based on a list of value of one column -return a pd\n",
+    "# df filter based on a list of value of one column -return a pd\n",
     "df[df['year'].isin([2012,2013])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Pima</th>\n",
-       "      <td>Molly</td>\n",
-       "      <td>2012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Yuma</th>\n",
-       "      <td>Amy</td>\n",
-       "      <td>2014</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       name  year\n",
-       "Pima  Molly  2012\n",
-       "Yuma    Amy  2014"
+       "'Jake'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# select multiple rows and columns by index\n",
+    "# filter multiple rows and columns by index\n",
     "df.iloc[0:2,[1,2]]\n",
-    "# select multiple rows and columns by name \n",
-    "df.loc[['Pima','Yuma'],['name','year']] "
+    "# filter multiple rows and columns by name \n",
+    "df.loc[['Pima','Yuma'],['name','year']] \n",
+    "# .ix[] is used to index a dataframe by both name and position\n",
+    "df.ix[0:2,['name','year']] \n",
+    "# view a value - View the value based on row and column\n",
+    "df.ix[3,'name']"
    ]
   },
   {
