--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -1170,6 +1170,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter by"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 135,
    "metadata": {},
    "outputs": [],
@@ -1597,6 +1606,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "merge and join difference\n",
+    "- join is based on index, sometimes need to set_index(want to merge id)\n",
+    "- merge is not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Numpy"
    ]
   },
@@ -1878,6 +1896,116 @@
     "        dd[k1].append('Nan')\n",
     "\n",
     "print(dd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>approved_by</th>\n",
+       "      <th>archived</th>\n",
+       "      <th>author</th>\n",
+       "      <th>controversiality</th>\n",
+       "      <th>user_reports</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>des-tal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>True</td>\n",
+       "      <td>des-tal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  approved_by  archived   author  controversiality user_reports\n",
+       "0        None     False  des-tal                 0           []\n",
+       "1        None      True  des-tal                 0           []"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert list of dict to df\n",
+    "my_list = [{u'data': {u'approved_by': None,\n",
+    "            u'archived': False,\n",
+    "            u'author': u'des-tal',\n",
+    "            u'controversiality': 0,\n",
+    "            u'user_reports': []},\n",
+    "            u'kind': u't1'},\n",
+    "\n",
+    "             {u'data': {u'approved_by': None,\n",
+    "            u'archived': True,\n",
+    "            u'author': u'des-tal',\n",
+    "            u'controversiality': 0,\n",
+    "            u'user_reports': []},\n",
+    "            u'kind': u't1'}]\n",
+    "\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame([i['data'] for i in my_list])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---------------+------------+----------+--------------------+----------------+\n",
+      "|    | approved_by   | archived   | author   |   controversiality | user_reports   |\n",
+      "|----+---------------+------------+----------+--------------------+----------------|\n",
+      "|  0 |               | False      | des-tal  |                  0 | []             |\n",
+      "|  1 |               | True       | des-tal  |                  0 | []             |\n",
+      "+----+---------------+------------+----------+--------------------+----------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print\n",
+    "from tabulate import tabulate\n",
+    "print(tabulate(df, headers='keys', tablefmt='psql'))"
    ]
   },
   {
