--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -1462,11 +1462,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pd.to_numeric vs np.float64\n",
+    "# To convert data we can use .astype() method on a series. \n",
+    "# Also keep in mind the ‘category’ type — it reduces size of a dataframe and makes computations faster. \n",
+    "# We can convert to any value that can be used as category — days of the week, gender, continent abbreviations — depends on a context.\n",
+    "\n",
     "# errors : {‘ignore’, ‘raise’, ‘coerce’}, default ‘raise’\n",
     "         # If ‘raise’, then invalid parsing will raise an exception\n",
     "         # If ‘coerce’, then invalid parsing will be set as NaN\n",
@@ -1606,9 +1610,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "merge and join difference\n",
-    "- join is based on index, sometimes need to set_index(want to merge id)\n",
-    "- merge is not"
+    "merge and join\n",
+    "- join \n",
+    "- merge\n",
+    "    - merged = pd.merge(left=df1, right=df2, on=None, left_on='col1', right_on='col2')"
    ]
   },
   {
@@ -2006,6 +2011,38 @@
     "# print\n",
     "from tabulate import tabulate\n",
     "print(tabulate(df, headers='keys', tablefmt='psql'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary modules\n",
+    "import glob\n",
+    "import pandas as pd \n",
+    "# Write the pattern: pattern \n",
+    "pattern = '*.csv' \n",
+    "# Save all file matches: csv_files\n",
+    "csv_files = glob.glob(pattern) \n",
+    "# Create an empty list: frames\n",
+    "frames = [] \n",
+    "# Iterate over csv_files \n",
+    "for csv in csv_files: \n",
+    "    # Read csv into a DataFrame: df \n",
+    "    df = pd.read_csv(csv) \n",
+    "    # Append df to frames \n",
+    "    frames.append(df)\n",
+    "# Concatenate frames into a single DataFrame: final_df\n",
+    "final_df = pd.concat(frames)"
    ]
   },
   {
