--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -66,6 +66,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create data frame\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "# Create two datetime features\n",
+    "df['Arrived'] = [pd.Timestamp('01-01-2017'), pd.Timestamp('01-04-2017')]\n",
+    "df['Left'] = [pd.Timestamp('01-01-2017'), pd.Timestamp('01-06-2017')]\n",
+    "\n",
+    "# Calculate Difference (Method 1)\n",
+    "# Calculate duration between features\n",
+    "df['Left'] - df['Arrived']\n",
+    "\n",
+    "# Calculate Difference (Method 2)\n",
+    "# Calculate duration between features\n",
+    "pd.Series(delta.days for delta in (df['Left'] - df['Arrived']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Arrived</th>\n",
+       "      <th>Left</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>2017-01-06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Arrived       Left\n",
+       "1 2017-01-04 2017-01-06"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select Time Range (Method 1)\n",
+    "df[df['Arrived']>'2017-01-03']\n",
+    "\n",
+    "\n",
+    "# Select Time Range (Method 2)\n",
+    "df = df.set_index(df['Left'])\n",
+    "df.loc['2017-01-01':'2017-01-04']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1480,7 +1575,7 @@
     "# convert If you already have numeric dtypes (int8|16|32|64,float64,boolean) you can convert it to another \"numeric\" dtype using Pandas .astype() method.\n",
     "df.a = df['a'].astype(float)\n",
     "# convert object dytpes to numberic\n",
-    "df.b = pd.to_numeric(df['b'], errors='coerce')"
+    "df.b = pd.to_numeric(df['b'], errors='coerce') "
    ]
   },
   {
